k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: hyperbrain
spec:
  selector:
    app: backend-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
